fixed cover extra spacing + classname change
reduced the botton padding of cover section to restore the original distance.

and change of new class name into general.csss

--- a/app/css/general.css
+++ b/app/css/general.css
@@ -248,7 +248,7 @@ div.lg-content-container section {
     }
 
     section {
-       padding: 120px 35px 70px 35px !important; 
+       padding: 120px 35px 20px 35px !important; 
     }
 
     section#contact h2 {
