--- a/app/css/home.css
+++ b/app/css/home.css
@@ -337,7 +337,7 @@ to{-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:
 
 /*///////////// FEATURED PROJECTS START /////////////*/
 
-section#featured-projects h2 {
+section#work h2 {
   margin-bottom: 35px;
 }
 
